# Project_Template

./: .gitignore  CMakeLists.txt  README.md  actions.py
.devcontainer/: devcontainer.json
app/: main.cpp
src/: CMakeLists.txt  ProjectLib.cpp
src/include/: ProjectLib.h
test/: CMakeLists.txt  main_test.cpp  readme_tests.md
test/GoogleTest_Framework/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/GoogleTest_Framework/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/Testfiles/: Testfile_Template.cpp
tools/: build_clean.sh  build_run.sh  build_test.sh  conanprofile_editor.py  make_component.py
